# cuga-viz

./: .gitignore  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  run_tests.sh  vite.config.ts
.github/workflows/: release.yml
server/: .secrets.baseline  build.sh  pyproject.toml
server/dashboard/: __init__.py  activity_tracker.py  cli.py  id_utils.py  server.py
server/dashboard/assets/: index-1UhspyOW.js  index-7d4-JLER.js  index-8VDtUXhh.css  index-8e764QEu.css  index-9wpbCuZd.js  index-B1qUDUvi.js  index-B9r7oszN.js  index-BBqSV6pw.js  index-BGPotfcS.js  index-BGdC7CiY.js  index-BHhmwCNo.css  index-BJx4sioz.js  index-BKjvEYEg.js  index-BODr4YAX.js  index-BPG-BRi7.js  index-BXowN3Fq.css  index-B_5fLpYY.js  index-BbWfCClv.js  index-BdRONwQb.js  index-Bflg-jB7.js  index-BfxcYU2m.js  index-BhCCLVIf.js  index-BhUjtnzj.js  index-BnI57hIf.js  index-BqzEM5qi.js  index-Bye247AM.js  index-C-VQ_e7r.js  index-C90VnT8t.js  index-CBJab-DH.js  index-CFe-Qzxq.js  index-CHesg0CX.js  index-CWcpjBhZ.js  index-CXrvVseq.css  index-CYcS6cWs.css  index-CZDX2KAx.js  index-Cgo0kLO7.js  index-ChZ7LMCN.js  index-CiP7xvER.js  index-CkT4BfYn.js  index-CmY-Yjmn.js  (+52 more)
server/dashboard/static/: index.html
server/dashboard/static/assets/: index-DmyDYw-g.js
src/: App.tsx  index.css
src/components/: Chart.utils.ts  ChartDot.tsx  ChartTooltip.tsx  Dashboard.tsx  ExpandableText.tsx  ExperimentManager.css  ExperimentManager.tsx  Header.css  Header.tsx  JsonPopupModal.tsx  MinimalChart.tsx  ProcessSummary.tsx  StatsTable.tsx  StepView.css  (+3 more)
(+11 files in other folders)
